--- a/responsive.css
+++ b/responsive.css
@@ -1,25 +1,39 @@
+/* Untuk Tablet */
+@media all and (max-width: 1000px){    
+    *{
+        overflow: auto;
+    }
+
+    .calculator{
+        padding-top: 45px;
+    }
+}
+
 /* Untuk Smartphone */
 @media all and (max-width: 670px){
     header{
         height: 75px;
+        justify-content: center;
     }
 
     header h1{
-        font-size: 25px;
+        font-size: 24px;
         line-height: 36px;
     }
 
     .logo{
-        width: 40%;
+        /* width: 40px; */
+        margin-right: 5px;
     }
     
-    header h1, .header-right{
+    .header-right{
         margin: 0;
         text-align: left;
     }
 
     .calculator{
         padding-top: 40px;
+        width: fit-content;
     }
 
     *{
